sistemo a grandi linee l'html e il css in base a cosa mi serve

--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="container">
+        <!-- header -->
+        <header>
+            <div class="logo">
+                <h1>FontIcons</h1>
+            </div>
+        </header>
+        <!-- /header -->
     
+        <!-- filtro -->
+        <div class="filtri">
+            <label for="type">Filtra per tipo </label>
+            <select name="type" id="type">
+                <option value="tutti">Tutti</option>
+                <option value="animali">Animali</option>
+                <option value="utenti">Utenti</option>
+            </select>
+        </div>
+        <!-- /filtro -->
+
+        <main class="icons">
+            <div class="icon">
+                <i class="fas fa-cat"></i>
+                <div class="nome">CAT</div>
+            </div>
+        </main>
+
+    </div>
+
+
 
     <script src="js/script.js"></script>
 </body>
