--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <!-- /filtro -->
 
         <main class="icons">
-            <div class="icon">
+            <!-- <div class="icon">
                 <i class="fas fa-cat"></i>
                 <div class="nome">CAT</div>
-            </div>
+            </div> -->
         </main>
 
     </div>
