prova riempimento filtrato

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         <div class="filtri">
             <label for="type">Filtra per tipo </label>
             <select name="type" id="type">
-                <option value="tutti">Tutti</option>
-                <option value="animali">Animali</option>
-                <option value="utenti">Utenti</option>
+                <option value="all">Tutti</option>
+                <option value="animal">Animali</option>
+                <option value="vegetable">Vegetali</option>
+                <option value="user">Utenti</option>
             </select>
         </div>
         <!-- /filtro -->
