--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>FontIcons</title>
 </head>
 <body>
 
+    <!-- contenitore -->
     <div class="container">
         <!-- header -->
         <header>
@@ -26,21 +27,25 @@
             <label for="type">Filtra per tipo </label>
             <select name="type" id="type">
                 <option value="all">Tutti</option>
-                <option value="animal">Animali</option>
+                <!-- <option value="animal">Animali</option>
                 <option value="vegetable">Vegetali</option>
-                <option value="user">Utenti</option>
+                <option value="user">Utenti</option> -->
             </select>
         </div>
         <!-- /filtro -->
 
+
+        <!-- icone -->
         <main class="icons">
             <!-- <div class="icon">
                 <i class="fas fa-cat"></i>
                 <div class="nome">CAT</div>
             </div> -->
         </main>
+        <!-- /icone -->
 
     </div>
+    <!-- /contenitore -->
 
 
 
